--- a/docs/2. INFRASTRUCTURE_SETUP.md
+++ b/docs/2. INFRASTRUCTURE_SETUP.md
@@ -4,6 +4,32 @@ This guide provides the detailed, one-time commands required to provision the pr
 
 ---
 
+## A Closer Look at Our Cloud Foundation
+
+At the heart of this project lies a carefully crafted infrastructure, defined declaratively using Terraform in the `iac/` directory. This approach ensures that our setup is reproducible, version-controlled, and easy to manage. Our cloud environment consists of two primary actors working in concert: a powerful Google Kubernetes Engine (GKE) cluster to run our application and a dedicated Jenkins VM to orchestrate our continuous integration and deployment (CI/CD) pipeline.
+
+### The Workhorse: Google Kubernetes Engine (GKE) Cluster
+
+The GKE cluster, named `asl-cluster`, is the stage where our hand gesture detection API performs. It's a GKE Standard cluster, which provides us with granular control over its configuration, allowing us to fine-tune the environment to meet the specific demands of our workloads.
+
+-   **Cluster Configuration**: The cluster is provisioned in the `us-central1` region with a single node to start, built on an `e2-standard-2` machine type. This offers a balanced blend of computing power and cost-efficiency, perfect for our development and deployment needs.
+-   **Scalability**: While we start with one node, the power of GKE lies in its ability to scale effortlessly as our application's traffic and complexity grow.
+
+### The Conductor: The Jenkins CI/CD Server
+
+Automation is key to modern software development. Our CI/CD pipeline is driven by a `jenkins-asl` Compute Engine instance, a virtual machine dedicated to building, testing, and deploying our application.
+
+-   **Self-Configuring VM**: This isn't just a blank server. Thanks to the `jenkins_startup.sh` script, the VM provisions itself upon creation. It installs everything needed to get the job done:
+    -   **Docker**: To create and manage containerized environments for our builds.
+    -   **Jenkins**: The core of our automation server.
+    -   **Kubectl & Helm**: The essential tools for communicating with our GKE cluster and deploying our application using Helm charts.
+    -   **GCP SDK**: To authenticate and interact with other Google Cloud services securely.
+-   **Secure Accessibility**: A specific firewall rule, `jenkins-asl-firewall`, is created alongside the instance. It selectively opens ports like `8080` for the Jenkins web UI and `22` for SSH access, ensuring the server is both accessible for us and secure from unwanted traffic.
+
+Together, these resources—orchestrated by a few simple Terraform commands—form a robust, automated, and scalable foundation for the Hand Gesture Detection API.
+
+---
+
 ## 1. Provision GCP Resources with Terraform
 
 These steps use Terraform to declaratively create the GKE cluster and the Jenkins VM as defined in the `iac/` directory. This approach ensures your infrastructure is reproducible and version-controlled.
@@ -86,17 +112,3 @@ kubectx
     ```shell
     gcloud compute instances get-serial-port-output jenkins-asl --zone us-central1-a --port 1
     ```
-
-```shell
-kubectl get service --namespace ingress-nginx ingress-nginx-controller --output wide
-```
-
-You can see something like this:
-```console
-NAME                       TYPE           CLUSTER-IP    EXTERNAL-IP    PORT(S)                      AGE     SELECTOR
-ingress-nginx-controller   LoadBalancer   10.3.251.92   34.63.222.25   80:31840/TCP,443:30840/TCP   7h36m   app.kubernetes.io/component=controller,app.kubernetes.io/instance=ingress-nginx,app.kubernetes.io/name=ingress-nginx
-```
-
-```console
-k logs hand-gesture-deployment-5c75bbc6db-slxkw -n model-serving
-```
