--- a/docs/3. JENKINS_SETUP.md
+++ b/docs/3. JENKINS_SETUP.md
@@ -176,6 +176,11 @@ sudo ss -tuln | grep 8080
 
 ## 3. Exposing Jenkins for GitHub Webhooks
 
+<div align="center">
+  <img src="../images/github_webhook_setup.png" alt="Jenkins Github Webhook" width="800">
+  <p><em>Jenkins Github Webhook</em></p>
+</div>
+
 For Jenkins to receive push and pull request events from GitHub, its web endpoint must be accessible from the public internet. During development, `ngrok` is an excellent tool for creating a temporary secure tunnel.
 
 1.  **Start a `tmux` Session:**
