--- a/docs/4. HELM_AND_KUBERNETES.md
+++ b/docs/4. HELM_AND_KUBERNETES.md
@@ -2,9 +2,28 @@
 
 This guide provides a detailed explanation of how the application is packaged and deployed onto a Kubernetes cluster using Helm.
 
+<div align="center">
+  <img src="../images/kubernetes-and-helm.png" alt="Kubernetes and Helm" width="400">
+  <p><em>Kubernetes and Helm</em></p>
+</div>
 ---
 
-## 1. What is Helm?
+## 1. What is Kubernetes?
+
+Before diving into Helm, it's important to understand Kubernetes, the platform our application runs on. [Kubernetes](https://kubernetes.io/) (often abbreviated as K8s) is an open-source container orchestration system for automating software deployment, scaling, and management. It allows us to run our application reliably and scalably in a production environment.
+
+At its core, Kubernetes manages a cluster of compute instances (nodes) and schedules containers to run on them based on available resources. It provides several key abstractions that we use to define our application:
+
+-   **Pods**: The smallest deployable units in Kubernetes. A Pod represents a single instance of a running process in your cluster and can contain one or more containers.
+-   **Deployments**: A higher-level object that manages Pods. A Deployment ensures that a specified number of Pod replicas are running at all times and handles updates and rollbacks seamlessly.
+-   **Services**: An abstraction that defines a logical set of Pods and a policy by which to access them. Services provide a stable network endpoint (like an IP address and port) for a group of Pods, whose own IPs can change.
+-   **Ingress**: An API object that manages external access to the services in a cluster, typically HTTP. Ingress can provide load balancing, SSL termination, and name-based virtual hosting.
+
+Kubernetes provides the robust foundation, and Helm helps us manage the complexity of defining and deploying these resources.
+
+---
+
+## 2. What is Helm?
 
 [Helm](https://helm.sh/) is the package manager for Kubernetes. It allows us to bundle all the necessary Kubernetes resource definitions (like Deployments, Services, etc.) into a single, versioned package called a **chart**.
 
@@ -28,9 +47,14 @@ helm-charts/asl/
 
 ---
 
-## 2. Kubernetes Resources Explained
+## 3. Kubernetes Resources Explained
 
 Our Helm chart defines four key Kubernetes resources that work together to run the application.
+
+<div align="center">
+  <img src="../images/helm_chart_management.png" alt="Helm Chart Component" width="300">
+  <p><em>Helm Chart Component</em></p>
+</div>
 
 ### A. Deployment (`deployment.yaml`)
 
@@ -94,7 +118,7 @@ So:
 
 ---
 
-## 3. The Traffic and Data Flow
+## 4. The Traffic and Data Flow
 
 Understanding the flow of a request and data is key to understanding the architecture.
 
@@ -135,6 +159,11 @@ Let's check the status of the ingress-nginx-controller service to see if it has 
 kubectl get service --namespace ingress-nginx ingress-nginx-controller --output wide
 ```
 
+You can see something like this:
+```console
+NAME                       TYPE           CLUSTER-IP    EXTERNAL-IP    PORT(S)                      AGE     SELECTOR
+ingress-nginx-controller   LoadBalancer   10.3.251.92   34.63.222.25   80:31840/TCP,443:30840/TCP   7h36m   app.kubernetes.io/component=controller,app.kubernetes.io/instance=ingress-nginx,app.kubernetes.io/name=ingress-nginx
+```
 
 In `helm-charts/asl/templates/ingress.yaml`:
 
