update helm docs

--- a/docs/4. HELM_AND_KUBERNETES.md
+++ b/docs/4. HELM_AND_KUBERNETES.md
@@ -19,6 +19,26 @@ At its core, Kubernetes manages a cluster of compute instances (nodes) and sched
 -   **Services**: An abstraction that defines a logical set of Pods and a policy by which to access them. Services provide a stable network endpoint (like an IP address and port) for a group of Pods, whose own IPs can change.
 -   **Ingress**: An API object that manages external access to the services in a cluster, typically HTTP. Ingress can provide load balancing, SSL termination, and name-based virtual hosting.
 
+### Kubernetes Architecture: Control Plane and Worker Nodes
+
+<div align="center">
+  <img src="../images/kubernetes_architecture.png" alt="Kubernetes architecture" width="400">
+  <p><em>Kubernetes architecture</em></p>
+</div>
+Understanding Kubernetes architecture helps explain how our application runs reliably at scale. A Kubernetes cluster consists of two main components:
+
+**Control Plane**: The brain of the cluster that makes global decisions about the cluster (like scheduling) and detects and responds to cluster events. In managed services like GKE, Google handles the control plane for us.
+
+**Worker Nodes**: The machines that run your application workloads. Each worker node runs several key components:
+
+-   **kubelet**: The primary node agent that communicates with the control plane. It ensures that containers described in Pod specifications are running and healthy. The kubelet watches for Pod assignments from the control plane and manages the container lifecycle, including pulling images, starting/stopping containers, and reporting Pod status back to the control plane.
+
+-   **kube-proxy**: A network proxy that runs on each node and maintains network rules. It handles the networking aspect of Services by implementing load balancing and routing rules. When you create a Service, kube-proxy ensures that traffic sent to the Service's IP address gets properly forwarded to the backend Pods, even as Pods are created, destroyed, or moved between nodes.
+
+-   **Container Runtime**: The software responsible for running containers (like Docker or containerd). This is what actually executes our application containers.
+
+This distributed architecture ensures that even if individual nodes fail, the control plane can reschedule workloads to healthy nodes, and kube-proxy ensures network connectivity is maintained.
+
 Kubernetes provides the robust foundation, and Helm helps us manage the complexity of defining and deploying these resources.
 
 ---
